crates/dag-macros/tests/ui/workflow_timeout_missing_edge.stderr
error: [DAG206] timeout! references missing edge `trigger` -> `sink`
  --> tests/ui/workflow_timeout_missing_edge.rs:40:5
   |
40 |     timeout!(trigger -> sink, ms = 250);
   |     ^^^^^^^
